edit: fix scroll-bar on small device

--- a/layout/layout_maxwidth_480.css
+++ b/layout/layout_maxwidth_480.css
@@ -24,6 +24,16 @@
         word-break: break-word;
     }
 
+    ::-webkit-scrollbar
+    {
+        display: none;
+    }
+
+    ::-webkit-scrollbar-thumb
+    {
+        display: none;
+    }
+
     #main {
         display: flex;
         flex-direction: column;
